# CryptoTrader

./: .env.example  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  build_and_deploy.bat  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  restart_dashboard.bat  start_bot.bat  start_bot.sh  start_dashboard.bat  start_dashboard.sh  start_dashboard_remote.bat  stop_bot.bat  stop_bot.sh  stop_dashboard.bat
.github/workflows/: ci.yml
_bmad-output/: project-context.md
_bmad-output/analysis/: brainstorming-session-2026-01-05-dashboard-design.md  brainstorming-session-2026-01-05.md
dashboard/: auth.py  config.py  main.py  requirements.txt  state.py
dashboard/components/: configuration_view.py  grid_visualization.py  header.py  pairs_table.py  performance_view.py  predictions_view.py  price_chart.py  timeframe_row.py  trade_history.py
dashboard/services/: __init__.py  api_client.py  data_models.py  pnl_calculator.py  websocket_service.py
data/: prediction_positions.json
deploy/gcp/: README.md  cloudbuild.yaml  contact.yaml  deploy.sh  http-redirect.yaml
docs/: GRID_STRATEGY.md  index.md  project-scan-report.json
docs/001-initial-setup-plan/: Epic-Phase3-Backtesting.md  Epic-Phase4-Monitoring-Alerting.md  Epics-and-Stories-Overview.md  Modular-Python-Crypto-Trading-Bot-Complete-Implementation-Plan.md
docs/002-streamlit-dashboard/: 20260104204500-add-api-server-to-main.md  20260104211500-add-dashboard-orders-strategies-api.md  20260104214700-fix-dashboard-api-trade-history-binance.md  20260104220500-fix-dashboard-metrics-unrealized-pnl.md  20260104222800-fix-dashboard-metrics-display.md  20260104223000-reduce-dashboard-flickering.md  20260105120000-code-review-dashboard-fixes.md  Epic-Phase1-API-Client.md  Epic-Phase1-Authentication-Navigation.md  Epic-Phase1-Project-Setup.md  Epic-Phase2-Charting.md  Epic-Phase2-Dashboard-Pages.md  Epic-Phase3-RealTime.md  Epics-and-Stories-Overview.md  streamlit-dashboard-initial-implementation.plan.md
docs/dashboard/: dashboard-research-2025-06-01.md
docs/implementation-artefacts/: 1-1-initialize-dashboard-project-structure.md  1-2-install-and-configure-dependencies.md  1-3-implement-dark-theme-configuration.md  1-4-create-configuration-module.md  1-5-implement-main-entry-point.md  10-1-implement-grid-visualization.md  10-2-implement-configuration-view.md  10-3-implement-simple-authentication.md  sprint-status.yaml  (+30 more)
scripts/: backtest_1h_btc.py  backtest_1h_final.py  backtest_1h_realistic.py  backtest_confidence.py  backtest_filter_variations.py  backtest_improved.py  backtest_new_approaches.py  backtest_new_features.py  backtest_phase1_embargo.py  backtest_phase2_multicoin.py  backtest_phase3_triple_barrier.py  backtest_phase4_calibration.py  backtest_predictions.py  backtest_shorts.py  backtest_shorts_regime.py  backtest_stocks.py  check_balance.py  daily_prediction_run.py  diagnose_predictions.py  investigate_alternatives.py  scheduled_sell.py  scheduled_sell_pos2.py  sell_old_positions.py  start_prediction_bot.py  telegram_summary.py  telegram_trade_summary.py  test_isolated.py  test_regression.py
tests/: README.md  __init__.py  conftest.py
trading_dashboard/: app.py  config.yaml.example  requirements.txt
(+134 files in other folders)
